<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <TableRow android:padding="2dp" >

            <TextView
                android:id="@+id/filename_label"
                android:layout_width="wrap_content"
                android:gravity="left"
                android:height="25dp"
                android:text="@string/filename_label"
                android:textColor="@android:color/white"
                android:textSize="20dp" />
            
            <EditText
                android:id="@+id/filename"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:background="@android:color/darker_gray"
                android:bottomRightRadius="15dp"
                android:editable="false"
                android:inputType="none"
                android:textSize="15dp" />
        
        </TableRow>

<TableRow android:padding="2dp" >

            <TextView
                android:id="@+id/targetfilename_label"
                android:layout_width="wrap_content"
                android:gravity="left"
                android:height="25dp"
                android:text="@string/targetfilename_label"
                android:textColor="@android:color/white"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/targetfilename"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:textSize="15dp"
                android:background="@android:color/darker_gray"
                android:inputType="none"
                android:editable="false"
                android:bottomRightRadius="15dp"/>
        </TableRow>

        <TableRow android:padding="2dp" >

            <TextView
                android:id="@+id/artist_label"
                android:layout_width="wrap_content"
                android:gravity="left"
                android:height="25dp"
                android:text="@string/artist_label"
                android:textColor="@android:color/white"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/artist"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:hint="@string/artist"
                android:textSize="15dp" />
        </TableRow>

        <TableRow android:padding="2dp" >

            <TextView
                android:id="@+id/title_label"
                android:layout_width="wrap_content"
                android:gravity="left"
                android:height="25dp"
                android:text="@string/title_label"
                android:textColor="@android:color/white"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:hint="@string/title"
                android:textSize="15dp" />
        </TableRow>

        <TableRow android:padding="2dp" >

            <TextView
                android:id="@+id/album_label"
                android:layout_width="wrap_content"
                android:gravity="left"
                android:height="25dp"
                android:text="@string/album_label"
                android:textColor="@android:color/white"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/album"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:hint="@string/album"
                android:textSize="15dp" />
        </TableRow>

        <TableRow android:padding="2dp" >

            <TextView
                android:id="@+id/duration_label"
                android:layout_width="wrap_content"
                android:gravity="left"
                android:height="25dp"
                android:text="@string/duration_label"
                android:textColor="@android:color/white"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/duration"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:background="@android:color/white"
                android:hint="@string/duration"
                android:paddingLeft="10dp"
                android:textColor="@android:color/black"
                android:textSize="15dp" />
        </TableRow>

        <TableRow android:padding="2dp" >

            <TextView
                android:id="@+id/bitrate_label"
                android:layout_width="wrap_content"
                android:gravity="left"
                android:height="25dp"
                android:text="@string/bitrate_label"
                android:textColor="@android:color/white"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/bitrate"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:background="@android:color/white"
                android:hint="@string/bitrate"
                android:paddingLeft="10dp"
                android:textColor="@android:color/black"
                android:textSize="15dp" />
        </TableRow>
    </TableLayout>

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="send"
            android:text="@string/button_send" />

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="settings"
            android:text="@string/button_prefs" />

</LinearLayout>